--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -7,6 +7,7 @@
   font-family: $font-family-base;
   font-size: $font-size-base;
   font-weight: $font-weight-bold;
+  border-radius: 6px;
 }
 
 .success-button {
@@ -18,6 +19,7 @@
   font-family: $font-family-base;
   font-size: $font-size-base;
   font-weight: $font-weight-bold;
+  border-radius: 6px;
 }
 
 .danger-button {
