feat: create the navbar

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -5,6 +5,7 @@
 @import 'base/mixins';
 @import 'components/buttons';
 @import 'components/card';
+@import 'components/navbar';
 @import "pages/HomePage";
 
 html {
