feat: create the navbar

--- a/assets/styles/base/_variables.scss
+++ b/assets/styles/base/_variables.scss
@@ -1,6 +1,6 @@
 //Colors
-$primary-color: #3f51b5;
-$secondary-color: rgba(8, 8, 91, 1);
+$primary-color: rgba(8, 8, 91, 1);
+$secondary-color: #3f51b5;
 $third-color: rgba(255, 200, 87, 1);
 $third-color-lighter: rgba(255, 200, 87, 0.6);
 $success-color: rgba(26, 188, 156, 1);
