feat: create the register page

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -8,6 +8,8 @@
 @import 'components/navbar';
 @import 'components/footer';
 @import "pages/HomePage";
+@import "pages/register";
+@import "components/form";
 
 html {
   font-size: 14px;
