--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -32,3 +32,23 @@
   font-size: $font-size-base;
   font-weight: $font-weight-bold;
 }
+
+.toggle-button-container {
+  position: relative;;
+  display: flex;
+  flex-direction: column;;
+  align-items: flex-end;
+  .toggle-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: $third-color;
+    position: absolute;
+    top: -22px;
+    right:0;
+
+    &:hover {
+      color: darken($third-color, 50%);
+    }
+  }
+}
