feat: create the login page

--- a/assets/styles/pages/_register.scss
+++ b/assets/styles/pages/_register.scss
@@ -18,9 +18,12 @@ form {
   align-items: center;
   justify-content: center;
   height: 100vh;
-
   @include screen-size(desktop) {
     width: 25%;
     margin: auto;
+  }
+
+  a {
+    color: $third-color;
   }
 }
