--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}ForgeQuest - Home{% endblock %}
+{% block title %}{{ parent() }} - accueil{% endblock %}
 
 {% block body %}
     <section>
