--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}{{ parent() }} - formulaire d'enregistrement{% endblock %}
 
 {% block body %}
     {% for flash_error in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
     <section>
-        <h1>Register</h1>
+        <h1>S'enregistrer</h1>
 <section class="form-container">
         {{ form_start(registrationForm) }}
         <div class="form-row">
