--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -1,6 +1,7 @@
 .form-row {
   width: 100%;
-
+  display: flex;
+  flex-direction: column;
   .form-label {
     font-family: $font-family-base;
     color: $white;
