--- a/assets/styles/pages/_HomePage.scss
+++ b/assets/styles/pages/_HomePage.scss
@@ -16,7 +16,7 @@ section {
 
     p {
       line-height: 1.6;
-      text-align: left;
+      text-align: center;
       padding: 0 15px;
       font-size: $font-size-large;
       @include screen-size(desktop) {
