--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('styles/app.scss') }}">
         {% endblock %}
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
