--- a/templates/scenario/index.html.twig
+++ b/templates/scenario/index.html.twig
@@ -29,7 +29,7 @@
                             </ul>
                         </section>
                         <footer>
-                            <a href="#" class="success-button">Découvrir</a>
+                            <a href="{{ path('scenario_show', { 'id': scenario.id }) }}" class="success-button">Découvrir</a>
                         </footer>
                     </article>
                 {% endfor %}
