--- a/assets/styles/pages/_scenariosPage.scss
+++ b/assets/styles/pages/_scenariosPage.scss
@@ -20,3 +20,14 @@ section {
     padding: 2rem;
   }
 }
+
+.scenario-resume {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
+  p {
+    text-align: left;
+    margin: 10px 5px;
+  }
+}
