feat: create the page to add a scenario

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -9,6 +9,9 @@
             <a href="{{ path('app_home') }}" class="{{ app.request.get('_route') == 'app_home' ? 'active' : '' }}">Accueil</a>
             <a href="{{ path('scenario_index') }}" class="{{ app.request.get('_route') == 'scenario_index' ? 'active' : '' }}">Explorer les scénarios</a>
             <a href="#">Univers de jeu</a>
+            {% if is_granted('ROLE_USER') %}
+                <a href="{{ path('scenario_create') }}" class="{{ app.request.get('_route') == 'scenario_create' ? 'active' : '' }}">Créer un scénario</a>
+            {% endif %}
             {% if app.user %}
                 <a href="/logout">Se déconnecter</a>
             {% else %}
