--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -7,9 +7,8 @@
 @import 'components/card';
 @import 'components/navbar';
 @import 'components/footer';
-@import "pages/HomePage";
-@import "pages/register";
 @import "components/form";
+@import "pages/HomePage";
 @import "pages/scenariosPage";
 
 
@@ -62,3 +61,23 @@ a {
   color: $white;
   font-size: $font-size-base
 }
+
+.flash-success {
+  width: 100%;
+  height: fit-content;
+  background-color: $success-color;
+  color: $dark;
+  padding: 1rem 1.5rem;
+  border-radius: 8px;
+  box-shadow: $third-color-lighter 0 4px 10px 0;
+  border: 1px solid lighten($success-color, 10%);
+  font-size: $font-size-base;
+  text-align: center;
+  line-height: 1.5;
+
+  @include screen-size(desktop) {
+    width: 75%;
+    margin: auto;
+  }
+}
+
