--- a/assets/styles/components/_card.scss
+++ b/assets/styles/components/_card.scss
@@ -24,7 +24,7 @@
   .card-image {
     width: 100%;
     border-radius: 10px;
-    margin-bottom: 15px;
+    margin: 15px 5px;
   }
 
   .card-tags ul {
