--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -1,3 +1,16 @@
+.form-container {
+  width: 100%;
+  height: 100vh;
+  @include screen-size(desktop) {
+    width: 50%;
+    margin: auto;
+  }
+
+  a {
+    color: $third-color;
+  }
+}
+
 .form-row {
   width: 100%;
   display: flex;
@@ -19,7 +32,7 @@
     }
   }
 
-  .form-widget-simple {
+  .form-widget-simple, .form-select {
     border-radius: 6px;
     background-color: $third-color-lighter;
     width: 100%;
@@ -43,7 +56,36 @@
     font-size: $font-size-base;
     margin-top: 0.25rem;
   }
+
+  .form-check-group {
+    @include screen-size(desktop) {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+    .form-check {
+    }
+  }
+  }
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
+
+  .success-button {
+    width: 100%;
+    @include screen-size(desktop) {
+      width:revert;
+    }
+  }
 }
 
-
-
+textarea {
+  border-radius: 6px;
+  background-color: $third-color-lighter;
+  width: 100%;
+  font-family: $font-family-base;
+}
