--- a/assets/styles/pages/_scenariosPage.scss
+++ b/assets/styles/pages/_scenariosPage.scss
@@ -6,6 +6,14 @@ section {
       font-size: $font-size-extra-large;
     }
   }
+
+  p {
+    text-align: center;
+    margin: 35px 0 15px 0;
+    @include screen-size(desktop) {
+      font-size: $font-size-large;
+    }
+  }
 }
 
 .card-container {
@@ -29,5 +37,8 @@ section {
   p {
     text-align: left;
     margin: 10px 5px;
+    @include screen-size(desktop) {
+      width: 75vw;
+    }
   }
 }
