--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -42,11 +42,11 @@
                     <header>
                         <h3 class="card-title">{{ scenario.title }}</h3>
                     </header>
-                    {% if scenario.imageFile is empty %}
+                    {% if scenario.imageName is empty %}
                         <img src="{{ asset('images/black-dragon_640.webp') }}" alt="dragon noir entouré de flammes"
                              class="card-image">
                     {% else %}
-                        <img src="{{ scenario.imageFile }}" alt="{{ scenario.imageAlt }}" class="card-image">
+                        <img src="{{ vich_uploader_asset(scenario, 'imageFile') }}" alt="{{ scenario.imageAlt }}" class="card-image">
                     {% endif %}
                     <section class="card-tags">
                         <ul>
