fix: errors in login form not correct
Correct the message and the CSS

--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -48,7 +48,10 @@
   .form-error {
     color: $white;
     background-color: $danger-color;
+    padding: 0.5rem 1rem;
     font-size: 0.875rem;
+    text-align: center;
+    margin: 1.5rem;
   }
 
   .form-help {
