--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -5,9 +5,13 @@
 {% block body %}
     <section>
         <h1>Se connecter</h1>
+
         {% if error %}
-            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            <div class="form-row">
+                <div class="form-error">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            </div>
         {% endif %}
+
         <form class="form-container" action="{{ path('app_login') }}" method="post">
             <div class="form-row">
                 <label for="username" class="form-label">e-mail</label>
@@ -30,7 +34,7 @@
                             required>
                 </div>
             </div>
-{#            <input type="hidden" name="_target_path" value="/profile">#}
+            {#            <input type="hidden" name="_target_path" value="/profile"> #}
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
             <p>Pas encore de compte ? <a href="{{ path('app_register') }}">Créez en un ici</a></p>
 
