--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -29,7 +29,7 @@
     {#    ajout des boutons explorer et Univers de jeu #}
     <section class="buttons-container">
         <a href="{{ path('scenario_index') }}" class="generic-button">Explorer nos scénarios</a>
-        <a href="#" class="generic-button">Univers de jeu</a>
+        <a href="{{ path('univers_index') }}" class="generic-button">Univers de jeu</a>
     </section>
     <h2>Nos derniers scénarios</h2>
     {#    section affichage des dernier scénarios #}
