--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -31,6 +31,7 @@
   font-family: $font-family-base;
   font-size: $font-size-base;
   font-weight: $font-weight-bold;
+  border-radius: 6px;
 }
 
 // Conteneur principal du champ mot de passe
