--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -34,7 +34,7 @@
                             required>
                 </div>
             </div>
-            {#            <input type="hidden" name="_target_path" value="/profile"> #}
+            <input type="hidden" name="_target_path" value="/profile">
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
             <p>Pas encore de compte ? <a href="{{ path('app_register') }}">Créez en un ici</a></p>
 
