--- a/assets/styles/pages/_ProfilePage.scss
+++ b/assets/styles/pages/_ProfilePage.scss
@@ -1,9 +1,9 @@
 table {
   width: 100%;
   border-collapse: collapse;
+  margin: 2rem auto;
 
   @include screen-size(desktop) {
-    margin: auto;
     width: 50%;
   }
 
@@ -45,8 +45,29 @@ tr td:last-child {
   }
 }
 
-section {
-  h2 {
-    text-align: left;
+.popup-delete {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+
+  .confirm-dialog {
+    background: $secondary-color;
+    padding: 20px;
+    border-radius: 6px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    color: $white;
   }
 }
+
+.hidden {
+  display: none;
+}
+
