feat: create the error pages

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -12,6 +12,7 @@
 @import "pages/scenariosPage";
 @import "pages/UniversPage";
 @import "pages/ProfilePage";
+@import "pages/errorPage";
 
 
 html {
